Fix WikimediaImageFinderService